# rendumper

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  df  gcc-4.5.cmake  init-prefix.sh  layout.txt  olddocs.rst  renderer.py
g_src/: CMakeLists.txt  KeybindingScreen.cpp  ViewBase.h  basics.cpp  basics.h  command_line.cpp  curses.h  dwarf_fortress.cpp  enabler.cpp  enabler.h  enabler_input.cpp  enabler_input.h  files.cpp  files.h  find_files.cpp  find_files.h  find_files_posix.cpp  fugr_dump.cc  g_basics.h  graphics.cpp  graphics.h  init.cpp  init.h  interface.cpp  interface.h  keybindings.cpp  keybindings.h  mail.hpp  music_and_sound.cpp  music_and_sound_g.h  music_and_sound_openal.cpp  music_and_sound_v.h  platform.cpp  platform.h  random.cpp  random.h  renderer.cpp  renderer.h  renderer_2d.hpp  renderer_curses.cpp  (+10 more)
g_src/shaders/: pms.fs  pms.vs
glue/: CMakeLists.txt  glue.cpp  glue.h
include/: ikeyboard.h  imqueue.h  imusicsound.h  iplatform.h  irenderer.h  isimuloop.h  itextures.h  itypes.h
misc/: flatten-soundsense.py  ttman-0.cpp
modtests/: CMakeLists.txt  alert.cpp  find.cpp  life.cpp
modules/: CMakeLists.txt  README.rst  glue.cpp  glue.h  grab-shaders.py  realpath-win32.cpp  test.cpp
modules/common/: ansi_colors.h  common_code_deps.cpp  common_code_deps.h  cp437.cpp  df_buffer.cpp  df_buffer.h  df_glob.cpp  df_glob.h  df_text.h  emafilter.h  font8png.h  la_muerte_el_gl.cpp  logging.cpp  logging.h  posix_glob.cpp  posix_glob.h  settings.cpp  settings.h  shrink.h  simuloop.cpp  sound-stub.cpp  textures-stub.cpp  utf8decode.h
modules/include/: emafilter.h  glue.h  ideclspec.h  ikeyboard.h  imqueue.h  imusicsound.h  iplatform.h  irenderer.h  isimuloop.h  itextures.h  itypes.h  la_muerte_el_gl.h
modules/platform-ncurses/: mqueue.cpp  platform.cpp
modules/platform-posix/: curses-alert.cpp  gtk-alert.cpp  module.cpp  osx-alert.cpp
modules/platform-sdl2/: mqueue.cpp  platform.cpp
modules/platform-sdl20/: mqueue.cpp  platform.cpp
modules/platform-win32/: module.cpp
modules/renderer-ncurses/: renderer.cpp  simuloop.cpp
modules/renderer-sdl20-gl21/: textures.cpp
modules/renderer-sdl2gl2/: module.cpp  pms.fs  pms.vs  textures.cpp
modules/renderer-sdl2gl3/: module.cpp
modules/renderer-stub/: renderer.cpp  simuloop.cpp
modules/shaders/: blit120.fs  blit120.vs  grid120.fs  grid120.vs  grid130.fs  grid130.vs  postproc.fs  postproc.vs  ttf130.fs  ttf130.vs
modules/simuloop/: module.cpp
modules/sound-fmodex/: module.cpp
modules/sound-openal/: module.cpp
modules/sound-sdl2mixer/: module.cpp
modules/sound-stub/: module.cpp
modules/tests/: alert.cpp  find.cpp  life.cpp
